Divide and Conquer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/05. Problem Solving Patterns/03. Sliding Window.js"></script>
+    <script src="src/05. Problem Solving Patterns/04. Divide and Conquer.js"></script>
   </body>
 </html>
