--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/05. Problem Solving Patterns/04. Divide and Conquer.js"></script>
+    <script src="src/06. 100percentage OPTIONAL Challenges/03. Frequency Counter - sameFrequency.js"></script>
   </body>
 </html>
