--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/06. 100percentage OPTIONAL Challenges/04. Frequency Counter, Multiple Pointer - areThereDuplicates.js"></script>
+    <script src="src/06. 100percentage OPTIONAL Challenges/05. Multiple Pointers - averagePair.js"></script>
   </body>
 </html>
