--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/06. 100percentage OPTIONAL Challenges/07. Sliding Window - maxSubarraySum.js"></script>
+    <script src="src/06. 100percentage OPTIONAL Challenges/08. Sliding Window - minSubArrayLen.js"></script>
   </body>
 </html>
