--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/07. Recursion/countdown.js"></script>
+    <script src="src/07. Recursion/factorial_iterative.js"></script>
   </body>
 </html>
