--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/08. Recursion Problem Set/11. factorial.js"></script>
+    <script src="src/08. Recursion Problem Set/12. productOfArray.js"></script>
   </body>
 </html>
