--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/08. Recursion Problem Set/14. fib.js"></script>
+    <script src="src/10. Searching Algorithms/Exercise 24: Linear Search Exercise.js"></script>
   </body>
 </html>
