--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/10. Searching Algorithms/Exercise 25: Binary Search.js"></script>
+    <script src="src/10. Searching Algorithms/Naive String Search Implementation.js"></script>
   </body>
 </html>
