--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/10. Searching Algorithms/Naive String Search Implementation.js"></script>
+    <script src="src/11. Bubble Sort/bubble_optimized.js"></script>
   </body>
 </html>
