Quick Sort - Pivot Helper

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/15. Merge Sort/mergeSort.js"></script>
+    <script src="src/16. Quick Sort/Pivot Helper.js"></script>
   </body>
 </html>
