--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/17. Radix Sort/radixSort without Help Actually Proud Commit kk before see his Solution.js"></script>
+    <script src="src/17. Radix Sort/radixSort.js"></script>
   </body>
 </html>
