Data Structure :: The Class Keyword

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/17. Radix Sort/radixSort.js"></script>
+    <script src="src/18. Data Structures Introduction/The Class Keyword.js"></script>
   </body>
 </html>
