Doubly Linked Lists :: Push

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/19. Singly Linked Lists/Sigly_Linked_List.js"></script>
+    <script src="src/20. Doubly Linked Lists/Doubly_Linked_Lists.js"></script>
   </body>
 </html>
