Binary Heap :: Insert

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/22. Binary Search Tree/BST_Classes.js"></script>
+    <script src="src/23. Binary Heaps/Max Binary Heap.js"></script>
   </body>
 </html>
