Hash Table :: Set and Get

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/23. Binary Heaps, Priority Queues/Priority Queue.js"></script>
+    <script src="src/24. Hash Tables/Hash Function.js"></script>
   </body>
 </html>
