Graph :: Add Vertex

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/24. Hash Tables/Hash Function.js"></script>
+    <script src="src/25. Graphs/Graph.js"></script>
   </body>
 </html>
