Weighted Graph :: Add Vertex and Edge with weight

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="src/25. Graphs/Graph.js"></script>
+    <script src="src/26. Dijkstra's Algorithm/WeightedGraph.js"></script>
   </body>
 </html>
